add gitattr stuff

--- a/jobs/openshift-web-console-server/Jenkinsfile
+++ b/jobs/openshift-web-console-server/Jenkinsfile
@@ -216,12 +216,14 @@ node(TARGET_NODE) {
 
         stage("configure dummy merge") {
             package_repo.config("merge.ours.driver", "true")
-            package_repo.add_attribute("pkg/assets/bindata.go", "merge", "ours")
-            package_repo.add_attribute("pkg/assets/java/bindata.go", "merge", "ours")
+            //package_repo.add_attribute("pkg/assets/bindata.go", "merge", "ours")
+            //package_repo.add_attribute("pkg/assets/java/bindata.go", "merge", "ours")
             //def gitattributes = package_name + "/.gitattributes"
-            //def gitattributes = ".gitattributes"
-            //sh "echo 'pkg/assets/bindata.go merge=ours' >> ${gitattributes}"
-            //sh "echo 'pkg/assets/java/bindata.go merge=ours' >> ${gitattributes}"
+            dir(package_repo.path) {
+                def gitattributes = ".gitattributes"
+                sh "echo 'pkg/assets/bindata.go merge=ours' >> ${gitattributes}"
+                sh "echo 'pkg/assets/java/bindata.go merge=ours' >> ${gitattributes}"
+            }
         }
 
         stage("build upstream") {
