--- a/jobs/openshift-web-console-server/Jenkinsfile
+++ b/jobs/openshift-web-console-server/Jenkinsfile
@@ -216,13 +216,7 @@ node(TARGET_NODE) {
 
         stage("configure dummy merge") {
             package_repo.config("merge.ours.driver", "true")
-            //package_repo.add_attribute("pkg/assets/java/bindata.go", "merge", "ours")
-            dir(package_repo.path) {
-                package_repo.add_attribute("pkg/assets/bindata.go", "merge", "ours")
-                def gitattributes = ".gitattributes"
-//                sh "echo 'pkg/assets/bindata.go merge=ours' >> ${gitattributes}"
-                sh "echo 'pkg/assets/java/bindata.go merge=ours' >> ${gitattributes}"
-            }
+            package_repo.add_attributes()
         }
 
         stage("build upstream") {
