back to parameters

--- a/jobs/openshift-web-console-server/Jenkinsfile
+++ b/jobs/openshift-web-console-server/Jenkinsfile
@@ -216,8 +216,8 @@ node(TARGET_NODE) {
 
         stage("configure dummy merge") {
             package_repo.config("merge.ours.driver", "true")
-            package_repo.set_attribute("pkg/assets/bindata.go")
-            package_repo.set_attribute("pkg/assets/java/bindata.go")
+            package_repo.set_attribute("pkg/assets/bindata.go", "merge")
+            package_repo.set_attribute("pkg/assets/java/bindata.go", "merge")
         }
 
         stage("build upstream") {
