back to parameters

--- a/jobs/openshift-web-console-server/Jenkinsfile
+++ b/jobs/openshift-web-console-server/Jenkinsfile
@@ -216,7 +216,7 @@ node(TARGET_NODE) {
 
         stage("configure dummy merge") {
             package_repo.config("merge.ours.driver", "true")
-            package_repo.set_attribute("pkg/assets/bindata.go", "merge". "true")
+            package_repo.set_attribute("pkg/assets/bindata.go", "merge", "true")
             package_repo.set_attribute("pkg/assets/java/bindata.go", "merge", "true")
         }
 
