try passing strings

--- a/jobs/openshift-ansible/Jenkinsfile
+++ b/jobs/openshift-ansible/Jenkinsfile
@@ -162,8 +162,8 @@ node(TARGET_NODE) {
         [
             owner: GITHUB_OWNER,
             project: package_name,
-            pipeline: this
-            
+            path: package_name,
+            pipeline: this,
         ]
     )
     
