fix build_version in openshift-ansible

--- a/jobs/openshift-ansible/Jenkinsfile
+++ b/jobs/openshift-ansible/Jenkinsfile
@@ -114,8 +114,10 @@ node(TARGET_NODE) {
             pipeline: this,
         ]
     )
-    
-    releases = package_repo.releases(branch_prefix)
+
+    sshagent([SSH_KEY_ID]) {
+        releases = package_repo.releases(branch_prefix)
+    }
     
     // select the branch to build
     def branch_name
