--- a/jobs/openshift/Jenkinsfile
+++ b/jobs/openshift/Jenkinsfile
@@ -341,9 +341,11 @@ node(TARGET_NODE) {
 
         stage("tag and push") {
             echo "tag and push"
+            echo new_version as String
+            echo "new version: ${new_version}, new release: ${new_release}"
             rpm.tag(
-                version: "3.11.5",
-                release, "1",
+                version: "${new_version}",
+                release, "${new_release}",
                 debug: debug
             )
         }
