--- a/jobs/openshift-ansible/Jenkinsfile
+++ b/jobs/openshift-ansible/Jenkinsfile
@@ -150,7 +150,7 @@ node(TARGET_NODE) {
 
         // need new version and new release
         stage("update build/release numbers") {
-            spec = rpm.spec
+            //spec = rpm.spec
 
             def spec_file = package_repo.specpath
             echo "looking up spec_file: ${spec_file}"
