--- a/jobs/openshift-ansible/Jenkinsfile
+++ b/jobs/openshift-ansible/Jenkinsfile
@@ -150,13 +150,13 @@ node(TARGET_NODE) {
 
         // need new version and new release
         stage("update build/release numbers") {
-            //spec = rpm.spec
+            def spec = rpm.spec
 
-            def spec_file = package_repo.specpath
-            echo "looking up spec_file: ${spec_file}"
-            def rpm_spec = new RpmSpec(readFile(spec_file))
-            current_version = rpm_spec.version
-            current_release = rpm_spec.release
+            //def spec_file = package_repo.specpath
+            //echo "looking up spec_file: ${spec_file}"
+            //def rpm_spec = new RpmSpec(readFile(spec_file))
+            current_version = spec.version
+            current_release = spec.release
 
             def cv = new Version(current_version)
             def cr = new Version(current_release)
@@ -169,11 +169,11 @@ node(TARGET_NODE) {
             def nv = new Version(cv)
             def nr = cr.incrMajor()
 
-            rpm_spec.version = nv as String
-            rpm_spec.release = nr as String
+            spec.version = nv as String
+            spec.release = nr as String
 
-            new_version = rpm_spec.version
-            new_release = rpm_spec.release
+            new_version = spec.version
+            new_release = spec.release
 
             echo "new RPM id: ${new_version}-${new_release}"
             
