--- a/jobs/openshift/Jenkinsfile
+++ b/jobs/openshift/Jenkinsfile
@@ -217,7 +217,7 @@ node(TARGET_NODE) {
     )
 
     spec = rpm.spec
-    echo "spec filename: {spec.filename}"
+    echo "spec filename: ${spec.filename}"
     
     sshagent([SSH_KEY_ID]) {
         stage("clone ${repo_name}") {
