--- a/jobs/openshift/Jenkinsfile
+++ b/jobs/openshift/Jenkinsfile
@@ -221,10 +221,14 @@ node(TARGET_NODE) {
     echo "spec filename: ${spec.filename}"
     
     sshagent([SSH_KEY_ID]) {
-        stage("clone ${repo_name}") {
-            package_repo.clone()
+        stage("clone ${rpm.package_repo.project}") {
+            rpm.package_repo.clone()
         }
 
+        def spec = rpm.spec
+        echo "spec: ${spec}"
+        echo "spec filename: ${spec.filename}"
+    
         spec.load()
         if (build_version == 'master') {
             echo("detecting master version")
