print out rpm parts to check them

--- a/jobs/openshift/Jenkinsfile
+++ b/jobs/openshift/Jenkinsfile
@@ -211,6 +211,10 @@ node(TARGET_NODE) {
 
     rpm = new Rpm(repo: package_repo, pipeline: this)
 
+    echo "rpm: ${rpm}"
+    echo "rpm.repo: ${rpm.repo}"
+    echo "rpm.pipeline: ${rpm.pipeline}"
+
     def spec = rpm.spec
     echo "spec: ${spec}"
     echo "spec filename: ${spec.filename}"
