--- a/jobs/openshift-ansible/Jenkinsfile
+++ b/jobs/openshift-ansible/Jenkinsfile
@@ -141,17 +141,16 @@ node(TARGET_NODE) {
     )
     
     sshagent([SSH_KEY_ID]) {
-        stage("clone ${package_name}") {
-            echo "cloning to ${package_name}"
-            package_repo.clone()
+        stage("clone ${rpm.repo.project}") {
+            echo "cloning ${rpm.repo.project} to ${rpm.repo.path}"
+            rpm.repo.clone()
             echo "cloning complete"
-            
         }
 
         // need new version and new release
         stage("update build/release numbers") {
             def spec = rpm.spec
-
+            spec.load()
             current_version = spec.version
             current_release = spec.release
 
