print out rpm parts to check them

--- a/jobs/openshift-ansible/Jenkinsfile
+++ b/jobs/openshift-ansible/Jenkinsfile
@@ -189,10 +189,7 @@ node(TARGET_NODE) {
         }
 
         stage("build") {
-            rpm.build(
-                destination: env.WORKSPACE + "/BUILD",
-                debug: debug
-            )
+            rpm.build(env.WORKSPACE + "/BUILD", debug)
         }
     }
 
