--- a/jobs/openshift/Jenkinsfile
+++ b/jobs/openshift/Jenkinsfile
@@ -309,7 +309,7 @@ node(TARGET_NODE) {
         }
 
         stage("build") {
-            rpm.build([destination: env.WORKSPACE + '/BUILD', debug: debug])
+            rpm.build(env.WORKSPACE + '/BUILD', debug)
         }
     }
 
