--- a/jobs/openshift-web-console-server/Jenkinsfile
+++ b/jobs/openshift-web-console-server/Jenkinsfile
@@ -244,6 +244,8 @@ node(TARGET_NODE) {
         stage("tag and push") {
 
             echo "Build version: ${build_version}"
+            def new_version = "${build_version}.1"
+            def new_release = "1"
             echo "tag and push ${new_version}-${new_release}"
             
             rpm.tag(
