dummy error response, add email later

--- a/jobs/openshift-ansible/Jenkinsfile
+++ b/jobs/openshift-ansible/Jenkinsfile
@@ -231,8 +231,7 @@ node(TARGET_NODE) {
             }
         }
     } catch (error) {
-        
-        mail 
+        echo "Error: {error}" 
     } finally {
         archiveArtifacts allowEmptyArchive: true, artifacts: "BUILD/**"
     }
