set default email

--- a/jobs/openshift-ansible/Jenkinsfile
+++ b/jobs/openshift-ansible/Jenkinsfile
@@ -90,7 +90,7 @@ properties(
                         "all",
                         "none"
                     ].join("\n"),
-                    defaultValue: "none"
+                    defaultValue: "failure"
                 ],
                 
             ]
