--- a/jobs/openshift-ansible/Jenkinsfile
+++ b/jobs/openshift-ansible/Jenkinsfile
@@ -224,7 +224,8 @@ node(TARGET_NODE) {
             stage("build") {
                 if (release) {
                     echo "Building a copy in brew"
-                    rpm.release(new_version, scratch)
+                    buildid = rpm.release(scratch, debug)
+                    echo "brew build id: ${buildid}"
                 } else {
                     echo "Building a local copy"
                     rpm.build(env.WORKSPACE + "/BUILD", debug)
