--- a/jobs/test-copy/Jenkinsfile
+++ b/jobs/test-copy/Jenkinsfile
@@ -2,7 +2,7 @@
 node('container') {
     stage("Copy A File") {
         copy(
-            srcFile: "/var/lib/jenkins/.ssh/kerberos.keytab",
+            srcFile: "kerberos.keytab",
             dstFile: "kerberos.keytab"
         )
     }
